--- a/socketChatView/src/br/cefetmg/inf/lpii/view/criarSala.fxml
+++ b/socketChatView/src/br/cefetmg/inf/lpii/view/criarSala.fxml
@@ -50,12 +50,12 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="240.0" prefWidth="423.0" VBox.vgrow="ALWAYS">
       <children>
-            <TextField id="nomeSala" layoutX="139.0" layoutY="59.0" prefHeight="25.0" prefWidth="231.0" />
+            <TextField fx:id="nomeSala" layoutX="139.0" layoutY="59.0" prefHeight="25.0" prefWidth="231.0" />
             <Label layoutX="37.0" layoutY="63.0" text="Nome da Sala:" />
             <Label layoutX="23.0" layoutY="96.0" text="Senha (opcional):" />
-            <PasswordField id="senhaSala" layoutX="139.0" layoutY="92.0" prefHeight="25.0" prefWidth="231.0" />
-            <Button id="confirmarCriacao" layoutX="255.0" layoutY="128.0" mnemonicParsing="false" text="Criar" />
-            <Button id="cancelar" cancelButton="true" layoutX="308.0" layoutY="128.0" mnemonicParsing="false" text="Cancelar" wrapText="true" />
+            <PasswordField fx:id="senhaSala" layoutX="139.0" layoutY="92.0" prefHeight="25.0" prefWidth="231.0" />
+            <Button fx:id="confirmarCriacao" onAction= "clickConfirmar()" layoutX="255.0" layoutY="128.0" mnemonicParsing="false" text="Criar" />
+            <Button fx:id="cancelar" onAction="clickCancelar()" cancelButton="true" layoutX="308.0" layoutY="128.0" mnemonicParsing="false" text="Cancelar" wrapText="true" />
       </children>
     </AnchorPane>
   </children>
