--- a/socketChatView/src/br/cefetmg/inf/lpii/view/criarSala.fxml
+++ b/socketChatView/src/br/cefetmg/inf/lpii/view/criarSala.fxml
@@ -1,73 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.cefetmg.inf.lpii.view.CriarSalaController">
-  <children>
-    <MenuBar VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="File">
-          <items>
-            <MenuItem mnemonicParsing="false" text="New" />
-            <MenuItem mnemonicParsing="false" text="Open…" />
-            <Menu mnemonicParsing="false" text="Open Recent" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Close" />
-            <MenuItem mnemonicParsing="false" text="Save" />
-            <MenuItem mnemonicParsing="false" text="Save As…" />
-            <MenuItem mnemonicParsing="false" text="Revert" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Preferences…" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Edit">
-          <items>
-            <MenuItem mnemonicParsing="false" text="Undo" />
-            <MenuItem mnemonicParsing="false" text="Redo" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Cut" />
-            <MenuItem mnemonicParsing="false" text="Copy" />
-            <MenuItem mnemonicParsing="false" text="Paste" />
-            <MenuItem mnemonicParsing="false" text="Delete" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Select All" />
-            <MenuItem mnemonicParsing="false" text="Unselect All" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Help">
-          <items>
-            <MenuItem mnemonicParsing="false" text="About MyHelloApp" />
-          </items>
-        </Menu>
-      </menus>
-    </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="208.0" prefWidth="367.0" VBox.vgrow="ALWAYS">
-      <children>
-            <Accordion layoutX="411.0" layoutY="83.0" />
-            <ScrollPane id="conversa" fx:id="painelMensagem" layoutX="186.0" layoutY="16.0" prefHeight="222.0" prefWidth="440.0" />
-            <ScrollPane id="sala" fx:id="painelSalas" layoutX="16.0" layoutY="16.0" prefHeight="148.0" prefWidth="152.0">
-               <content>
-                  <Label text="Groups" />
-               </content>
-            </ScrollPane>
-            <CheckBox id="publico" fx:id="destinatarioAll" layoutX="553.0" layoutY="315.0" mnemonicParsing="false" text="All" />
-            <CheckBox id="privado" fx:id="destinatarioPrivate" layoutX="553.0" layoutY="338.0" mnemonicParsing="false" text="Private" />
-            <Button id="enviar" fx:id="enviarMensagem" layoutX="549.0" layoutY="255.0" mnemonicParsing="false" text="Send" />
-            <TextArea id="textoEnvio" fx:id="insereMensagem" layoutX="186.0" layoutY="255.0" prefHeight="102.0" prefWidth="345.0" />
-            <ScrollPane id="usuario" fx:id="painelUsuarios" layoutX="16.0" layoutY="211.0" prefHeight="148.0" prefWidth="152.0">
-               <content>
-                  <Label text="Users" />
-               </content>
-            </ScrollPane>
-            <Button id="criarSala" fx:id="criarSala" layoutX="16.0" layoutY="175.0" mnemonicParsing="false" text="Criar Sala" />
-      </children>
-    </AnchorPane>
-  </children>
+<VBox prefHeight="247.0" prefWidth="411.0" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.cefetmg.inf.lpii.controllers.InicioChatController">
+   <children>
+      <MenuBar VBox.vgrow="NEVER">
+         <menus>
+            <Menu mnemonicParsing="false" text="File">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="New" />
+                  <MenuItem mnemonicParsing="false" text="Open…" />
+                  <Menu mnemonicParsing="false" text="Open Recent" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <MenuItem mnemonicParsing="false" text="Close" />
+                  <MenuItem mnemonicParsing="false" text="Save" />
+                  <MenuItem mnemonicParsing="false" text="Save As…" />
+                  <MenuItem mnemonicParsing="false" text="Revert" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <MenuItem mnemonicParsing="false" text="Preferences…" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <MenuItem mnemonicParsing="false" text="Quit" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Edit">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Undo" />
+                  <MenuItem mnemonicParsing="false" text="Redo" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <MenuItem mnemonicParsing="false" text="Cut" />
+                  <MenuItem mnemonicParsing="false" text="Copy" />
+                  <MenuItem mnemonicParsing="false" text="Paste" />
+                  <MenuItem mnemonicParsing="false" text="Delete" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <MenuItem mnemonicParsing="false" text="Select All" />
+                  <MenuItem mnemonicParsing="false" text="Unselect All" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="About MyHelloApp" />
+               </items>
+            </Menu>
+         </menus>
+      </MenuBar>
+      <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="222.0" prefWidth="307.0" VBox.vgrow="ALWAYS">
+         <children>
+            <Label layoutX="74.0" layoutY="84.0" text="Nome do sala:" />
+            <TextField id="nomeUsuario" fx:id="nomeSala" layoutX="176.0" layoutY="80.0" />
+            <Button id="defineUsuario" fx:id="confirmaSala" layoutX="130.0" layoutY="165.0" mnemonicParsing="false" onAction="#clickConfirmar" text="Definir" />
+            <Label layoutX="69.0" layoutY="120.0" text="Senha (Opcional)" />
+            <PasswordField fx:id="senhaSala" layoutX="176.0" layoutY="116.0" />
+            <Button id="defineUsuario" fx:id="cancelar" layoutX="251.0" layoutY="165.0" mnemonicParsing="false" onAction="#clickCancelar" text="Cancelar" />
+         </children>
+      </AnchorPane>
+   </children>
 </VBox>
