--- a/socketChatView/src/br/cefetmg/inf/lpii/view/inicioChat.fxml
+++ b/socketChatView/src/br/cefetmg/inf/lpii/view/inicioChat.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="247.0" prefWidth="411.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.cefetmg.inf.lpii.controllers.InicioChatController">
+<VBox prefHeight="247.0" prefWidth="411.0" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.cefetmg.inf.lpii.controllers.InicioChatController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -50,9 +53,9 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="222.0" prefWidth="307.0" VBox.vgrow="ALWAYS">
       <children>
-            <Label layoutX="74.0" layoutY="84.0" text="Nome do usuário:" />
+            <Label layoutX="74.0" layoutY="84.0" text="Escolha seu nome:" />
             <TextField id="nomeUsuario" fx:id="nomeUsuario" layoutX="176.0" layoutY="80.0" />
-            <Button id="defineUsuario" fx:id="defineUsuario" onAction="inserirUsuario()" layoutX="273.0" layoutY="111.0" mnemonicParsing="false" text="Definir" />
+            <Button id="defineUsuario" fx:id="defineUsuario" layoutX="273.0" layoutY="123.0" mnemonicParsing="false" onAction="#inserirUsuario" text="Definir" />
       </children>
     </AnchorPane>
   </children>
