--- a/socketChatView/src/br/cefetmg/inf/lpii/view/telaPrincipal.fxml
+++ b/socketChatView/src/br/cefetmg/inf/lpii/view/telaPrincipal.fxml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="466.0" prefWidth="725.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.cefetmg.inf.lpii.controllers.ChatGUIController">
+<VBox prefHeight="466.0" prefWidth="725.0" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.cefetmg.inf.lpii.controllers.TelaPrincipalController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -64,18 +71,18 @@
                   <Label text="Usuários" />
                </content>
             </ScrollPane>
-            <Button id="criarSala" fx:id="criarSala" layoutX="145.0" layoutY="208.0" mnemonicParsing="false" onAction="#exibeCriarSala" prefHeight="25.0" prefWidth="51.0" text="Criar" />
-            <TextField layoutX="326.0" layoutY="10.0" prefHeight="25.0" prefWidth="152.0" />
+            <Button id="criarSala" fx:id="criarSala" layoutX="145.0" layoutY="208.0" mnemonicParsing="false" onAction="#inserirSala" prefHeight="25.0" prefWidth="51.0" text="Criar" />
+            <TextField fx:id="nomeUsuario" layoutX="326.0" layoutY="10.0" prefHeight="25.0" prefWidth="152.0" />
             <Label layoutX="226.0" layoutY="12.0" prefHeight="20.0" prefWidth="100.0" text="Definir usuário:">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField layoutX="19.0" layoutY="177.0" prefHeight="25.0" prefWidth="177.0" />
+            <TextField fx:id="nomeSala" layoutX="19.0" layoutY="177.0" prefHeight="25.0" prefWidth="177.0" />
             <Label layoutX="19.0" layoutY="160.0" text="Nome da Sala:" />
             <Button layoutX="93.0" layoutY="208.0" mnemonicParsing="false" text="Entrar" />
             <Button layoutX="127.0" layoutY="391.0" mnemonicParsing="false" text="Conversar" />
-            <Button layoutX="486.0" layoutY="10.0" mnemonicParsing="false" text="Definir" />
+            <Button layoutX="486.0" layoutY="10.0" mnemonicParsing="false" onAction="#inserirUsuario" text="Definir" />
             <TextField layoutX="20.0" layoutY="391.0" prefHeight="25.0" prefWidth="100.0" />
             <Label layoutX="22.0" layoutY="372.0" text="Nome do usuário:" />
       </children>
