--- a/socketChatView/src/br/cefetmg/inf/lpii/view/telaPrincipal.fxml
+++ b/socketChatView/src/br/cefetmg/inf/lpii/view/telaPrincipal.fxml
@@ -3,18 +3,21 @@
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="466.0" prefWidth="725.0" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.cefetmg.inf.lpii.controllers.TelaPrincipalController">
+<VBox prefHeight="466.0" prefWidth="725.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.cefetmg.inf.lpii.controllers.TelaPrincipalController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -58,33 +61,40 @@
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="394.0" prefWidth="648.0" VBox.vgrow="ALWAYS">
       <children>
             <Accordion layoutX="411.0" layoutY="83.0" />
-            <ScrollPane id="conversa" fx:id="painelMensagem" layoutX="226.0" layoutY="39.0" prefHeight="226.0" prefWidth="438.0" />
+            <ScrollPane id="conversa" fx:id="painelMensagem" layoutX="226.0" layoutY="39.0" prefHeight="226.0" prefWidth="438.0">
+               <content>
+                  <ListView fx:id="messagesList" prefHeight="224.0" prefWidth="436.0" />
+               </content></ScrollPane>
             <ScrollPane id="sala" fx:id="painelSalas" layoutX="16.0" layoutY="39.0" prefHeight="122.0" prefWidth="177.0">
                <content>
-                  <Label text="Salas" />
+                  <TableView fx:id="salasTable" prefHeight="120.0" prefWidth="175.0">
+                    <columns>
+                      <TableColumn maxWidth="175.0" minWidth="175.0" prefWidth="175.0" resizable="false" text="Salas" />
+                    </columns>
+                  </TableView>
                </content>
             </ScrollPane>
             <Button id="enviar" fx:id="enviarMensagem" layoutX="614.0" layoutY="390.0" mnemonicParsing="false" onAction="#enviarMensagem" text="Enviar" />
             <TextArea id="textoEnvio" fx:id="insereMensagem" layoutX="224.0" layoutY="285.0" prefHeight="102.0" prefWidth="438.0" />
-            <ScrollPane id="usuario" fx:id="painelUsuarios" layoutX="19.0" layoutY="256.0" prefHeight="116.0" prefWidth="177.0">
+            <ScrollPane id="usuario" fx:id="painelUsuarios" layoutX="19.0" layoutY="256.0" prefHeight="132.0" prefWidth="175.0">
                <content>
-                  <Label text="Usuários" />
+                  <TableView fx:id="usersTable" prefHeight="130.0" prefWidth="173.0">
+                    <columns>
+                      <TableColumn maxWidth="175.0" minWidth="175.0" prefWidth="175.0" resizable="false" text="Usuários" />
+                    </columns>
+                  </TableView>
                </content>
             </ScrollPane>
-            <Button id="criarSala" fx:id="criarSala" layoutX="145.0" layoutY="208.0" mnemonicParsing="false" onAction="#inserirSala" prefHeight="25.0" prefWidth="51.0" text="Criar" />
+            <Button id="criarSala" fx:id="criarSala" layoutX="145.0" layoutY="221.0" mnemonicParsing="false" onAction="#inserirSala" prefHeight="25.0" prefWidth="51.0" text="Criar" />
             <TextField fx:id="nomeUsuario" layoutX="326.0" layoutY="10.0" prefHeight="25.0" prefWidth="152.0" />
             <Label layoutX="226.0" layoutY="12.0" prefHeight="20.0" prefWidth="100.0" text="Definir usuário:">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="nomeSala" layoutX="19.0" layoutY="177.0" prefHeight="25.0" prefWidth="177.0" />
-            <Label layoutX="19.0" layoutY="160.0" text="Nome da Sala:" />
-            <Button layoutX="93.0" layoutY="208.0" mnemonicParsing="false" onAction="#definirSalaDestino" text="Entrar" />
-            <Button layoutX="127.0" layoutY="391.0" mnemonicParsing="false" onAction="#definirDestinatario" text="Conversar" />
+            <TextField fx:id="nomeSala" layoutX="14.0" layoutY="186.0" prefHeight="25.0" prefWidth="177.0" />
+            <Label layoutX="14.0" layoutY="169.0" text="Nome da Sala:" />
             <Button layoutX="486.0" layoutY="10.0" mnemonicParsing="false" onAction="#inserirUsuario" text="Definir" />
-            <TextField fx:id="destinatario" layoutX="20.0" layoutY="391.0" prefHeight="25.0" prefWidth="100.0" />
-            <Label layoutX="22.0" layoutY="372.0" text="Destinatário:" />
       </children>
     </AnchorPane>
   </children>
