--- a/socketChatView/src/br/cefetmg/inf/lpii/view/telaPrincipal.fxml
+++ b/socketChatView/src/br/cefetmg/inf/lpii/view/telaPrincipal.fxml
@@ -87,7 +87,7 @@
             </ScrollPane>
             <Button id="criarSala" fx:id="criarSala" layoutX="145.0" layoutY="221.0" mnemonicParsing="false" onAction="#inserirSala" prefHeight="25.0" prefWidth="51.0" text="Criar" />
             <TextField fx:id="nomeUsuario" layoutX="326.0" layoutY="10.0" prefHeight="25.0" prefWidth="152.0" />
-            <Label layoutX="226.0" layoutY="12.0" prefHeight="20.0" prefWidth="100.0" text="Definir usuário:">
+            <Label fx:id="teste" layoutX="226.0" layoutY="12.0" prefHeight="20.0" prefWidth="100.0" text="Definir usuário:">
                <font>
                   <Font size="14.0" />
                </font>
