--- a/socketChatView/src/br/cefetmg/inf/lpii/view/telaPrincipal.fxml
+++ b/socketChatView/src/br/cefetmg/inf/lpii/view/telaPrincipal.fxml
@@ -94,7 +94,7 @@
             </Label>
             <TextField fx:id="nomeSala" layoutX="14.0" layoutY="186.0" prefHeight="25.0" prefWidth="177.0" />
             <Label layoutX="14.0" layoutY="169.0" text="Nome da Sala:" />
-            <Button layoutX="486.0" layoutY="10.0" mnemonicParsing="false" onAction="#inserirUsuario" text="Definir" />
+            <Button fx:id="botaoDefinirNomeUser" layoutX="486.0" layoutY="10.0" mnemonicParsing="false" onAction="#inserirUsuario" text="Definir" />
       </children>
     </AnchorPane>
   </children>
